TestSuite/errors/err0372_op.pas
begin 
  var (a, b) := (1, 2);
  a.operator+=(a, b).Print;
end.